--- a/project/index.html
+++ b/project/index.html
@@ -38,86 +38,101 @@
     </script>
   </head>
   <body>
-    <main class="hidden">
+    <main class="">
       <header class="header">
-        <div class="container">
-          <nav class="nav flex">
-            <ul class="nav_list flex desktop_list">
-              <li class="nav_link middle"><a href="#about">About Us</a></li>
-              <li class="nav_link middle">
-                <a href="#leadership">Leadership</a>
-              </li>
-              <li class="nav_link middle">
-                <a href="#contact">Join Us</a>
-              </li>
-            </ul>
-            <a href="./">
-              <div class="logo">
-                <img src="./media/logo.png" alt="Bugbeat logo" />
-              </div>
-            </a>
-            <ul class="nav_list flex desktop_list">
-              <li class="nav_link middle">
-                <a href="#gallery">Club Gallery</a>
-              </li>
-              <li class="nav_link middle">
-                <a href="#features">Why Us ?</a>
-              </li>
-              <li class="nav_link middle">
-                <a href="#contact">Contact Us</a>
-              </li>
-            </ul>
-            <ul class="nav_list flex mobile_list">
-              <li class="nav_link middle"><a href="#about">About Us</a></li>
-              <li class="nav_link middle">
-                <a href="#leadership">Leadership</a>
-              </li>
-              <li class="nav_link middle">
-                <a href="#contact">Join Us</a>
-              </li>
-              <li class="nav_link middle">
-                <a href="#gallery">Club Gallery</a>
-              </li>
-              <li class="nav_link middle">
-                <a href="#features">Why Us ?</a>
-              </li>
-              <li class="nav_link middle">
-                <a href="#contact">Contact Us</a>
-              </li>
-            </ul>
-            <div class="nav_icon hidden">
-              <span></span>
-              <span></span>
-              <span></span>
+          <nav class="top_nav">
+            <div class="container">
+              <ul class="top_nav_list flex">
+                <li class="top_nav_link flex">
+                  <a href="mailto:smartagri@gmail.com" target="_blank">
+                    <i class="fa-solid fa-envelope"></i>
+                    <p>smartagri@gmail.com</p>
+                  </a>
+                </li>
+                <li class="top_nav_link flex">
+                  <a href="tel:0689659868" target="_blank">
+                    <i class="fa-solid fa-phone"></i>
+                    <p>0689659868</p>
+                  </a>
+                </li>
+              </ul>
+              <ul class="top_nav_list top_nav_list--social flex">
+                <li class="top_nav_link flex">
+                  <a href="https://web.facebook.com/BsecureEnsakh" target="_blank"
+                    ><i class="fa-brands fa-facebook-f"></i
+                  ></a>
+                </li>
+                <li class="top_nav_link flex">
+                  <a href="https://www.instagram.com/bsecure.club" target="_blank"
+                    ><i class="fa-brands fa-instagram"></i
+                  ></a>
+                </li>
+                <li class="top_nav_link flex">
+                  <a
+                    href="https://www.linkedin.com/company/b-secure-club/"
+                    target="_blank"
+                    ><i class="fa-brands fa-linkedin-in"></i
+                  ></a>
+                </li>
+              </ul>
             </div>
           </nav>
-        </div>
+          <nav class="nav">
+            <div class="container flex">
+              <a href="https://bugbeat.tech"
+                ><div class="logo">
+                  <img src="./media/logo.png" alt="Bugbeat logo" /></div
+              ></a>
+              <ul class="nav_list flex">
+                <li class="nav_link middle"><a href="#about">A Propos</a></li>
+                <li class="nav_link middle">
+                  <a target="_blank" href="https://company.bugbeat.tech">Fonctionnalités</a>
+                </li>
+                <li class="nav_link middle">
+                  <a target="_blank" href="https://leader.bugbeat.tech"
+                    >Produits</a
+                  >
+                </li>
+                <li class="nav_link middle">
+                  <a target="_blank" href="https://contact.bugbeat.tech"
+                    >Mode d'emploi</a
+                  >
+                </li>
+              </ul>
+              <a target="_blank" href="start" class="nav_link started_link flex"
+                >contactez-nous</a
+              >
+              <div class="nav_icon hidden">
+                <span></span>
+                <span></span>
+                <span></span>
+              </div>
+            </div>
+            </nav>
       </header>
 
       <section id="hero" class="hero_section flex">
         <div class="container flex">
-          <h1 class="hero_heading">Your Cybersecurity Passion</h1>
+          <h1 class="hero_heading">Bienvenue chez Smart Agri</h1>
           <p class="hero_parag">
-            Welcome to B-Secure, ENSA Khouribga's cybersecurity club. We're your
-            gateway to all things cybersecurity! Dive into this fascinating
-            world, enhance your skills, and contribute to digital security.
-            Whether you're a newbie or a pro, BeSecure offers a vibrant
-            community, exciting events, and hands-on experiences to fuel your
-            cyber journey. Join us now, and let's secure the digital future
-            together!
+            Chez Smart Agri, découvrez une approche innovante de l'arrosage automatique,
+            où la technologie radio rencontre l'agriculture pour favoriser une croissance
+            optimale. Notre expertise en irrigation intelligente maximise les rendements
+            tout en préservant l'eau et en garantissant la santé des plantes. Rejoignez-nous
+            dans cette alliance entre technologie et nature pour un avenir agricole durable.
           </p>
           <div class="main_btns flex">
             <div class="btn main_btn prim_btn flex">
-              <a href="#contact">Join The Club</a>
+              <a href="#contact">contactez-nous</a>
             </div>
             <div class="btn main_btn sec_btn flex">
-              <a href="#contact">Contact Us</a>
+              <a href="#contact">Savoir Plus</a>
             </div>
           </div>
         </div>
       </section>
 
-      <section id="about" class="about_section">
+      <!-- <section id="about" class="about_section">
         <div class="main_heading show_el show_el--top">
           <span class="caption">About Us</span>
           <h2>Who We Are ?</h2>
@@ -168,9 +183,9 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
-      <section id="leadership" class="leadership_section">
+      <!-- <section id="leadership" class="leadership_section">
         <div class="main_heading show_el show_el--top">
           <span class="caption">Leadership</span>
           <h2>Meet Our team</h2>
@@ -345,9 +360,9 @@
             </ul>
           </div>
         </div>
-      </section>
+      </section> -->
 
-      <section id="cta" class="cta_section hidden">
+      <!-- <section id="cta" class="cta_section hidden">
         <div class="container">
           <div class="main_heading show_el show_el--top">
             <span class="caption">Join Us</span>
@@ -465,9 +480,9 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
-      <section id="gallery" class="gallery_section">
+      <!-- <section id="gallery" class="gallery_section">
         <div class="main_heading show_el show_el--top">
           <span class="caption">Gallery</span>
           <h2>B-Secure in Action</h2>
@@ -511,9 +526,9 @@
             />
           </div>
         </div>
-      </section>
+      </section> -->
 
-      <section id="contact" class="contact_section">
+      <!-- <section id="contact" class="contact_section">
         <div class="main_heading show_el show_el--top">
           <span class="caption">Contact Us</span>
           <h2>Get In Touch</h2>
@@ -617,9 +632,9 @@
             </div>
           </form>
         </div>
-      </section>
+      </section> -->
 
-      <footer class="footer">
+      <!-- <footer class="footer">
         <div class="container">
           <div class="footer_content">
             <div class="column">
@@ -713,7 +728,7 @@
             ></a>
           </div>
         </div>
-      </footer>
+      </footer> -->
 
       <div class="thanks_popup flex hidden">
         <div class="cercle flex"><i class="fa-solid fa-check"></i></div>
@@ -727,9 +742,9 @@
     </main>
     <div class="overlay hidden"></div>
     <div class="overlay2 hidden"></div>
-    <div class="loader_content flex">
+    <!-- <div class="loader_content flex">
       <span class="loader"></span>
-    </div>
+    </div> -->
     <script src="script.js"></script>
   </body>
 </html>
