--- a/project/index.html
+++ b/project/index.html
@@ -58,18 +58,18 @@
               </ul>
               <ul class="top_nav_list top_nav_list--social flex">
                 <li class="top_nav_link flex">
-                  <a href="https://web.facebook.com/BsecureEnsakh" target="_blank"
+                  <a href="#" target="_blank"
                     ><i class="fa-brands fa-facebook-f"></i
                   ></a>
                 </li>
                 <li class="top_nav_link flex">
-                  <a href="https://www.instagram.com/bsecure.club" target="_blank"
+                  <a href="#" target="_blank"
                     ><i class="fa-brands fa-instagram"></i
                   ></a>
                 </li>
                 <li class="top_nav_link flex">
                   <a
-                    href="https://www.linkedin.com/company/b-secure-club/"
+                    href="#"
                     target="_blank"
                     ><i class="fa-brands fa-linkedin-in"></i
                   ></a>
@@ -79,22 +79,22 @@
           </nav>
           <nav class="nav">
             <div class="container flex">
-              <a href="https://bugbeat.tech"
+              <a href="#"
                 ><div class="logo">
                   <img src="./media/logo.png" alt="Bugbeat logo" /></div
               ></a>
               <ul class="nav_list flex">
                 <li class="nav_link middle"><a href="#about">A Propos</a></li>
                 <li class="nav_link middle">
-                  <a target="_blank" href="https://company.bugbeat.tech">Fonctionnalités</a>
+                  <a target="_blank" href="#">Fonctionnalités</a>
                 </li>
                 <li class="nav_link middle">
-                  <a target="_blank" href="https://leader.bugbeat.tech"
+                  <a target="_blank" href="#"
                     >Produits</a
                   >
                 </li>
                 <li class="nav_link middle">
-                  <a target="_blank" href="https://contact.bugbeat.tech"
+                  <a target="_blank" href="#"
                     >Mode d'emploi</a
                   >
                 </li>
@@ -132,61 +132,37 @@
         </div>
       </section>
 
-      <!-- <section id="about" class="about_section">
-        <div class="main_heading show_el show_el--top">
-          <span class="caption">About Us</span>
-          <h2>Who We Are ?</h2>
-        </div>
-        <div class="container">
-          <div class="about_img show_el show_el--top">
-            <img src="./media/gallery4.jpeg" alt="BugBeat About Section Img" />
-          </div>
+      <section id="about" class="about_section">
+        <div class="container flex">
           <div class="about_text">
-            <div class="about_titles flex show_el show_el--top">
-              <h2 class="about_title about_title--active" data-title="0">
-                About
-              </h2>
-              <h2 class="about_title" data-title="1">Mission</h2>
-              <h2 class="about_title" data-title="2">Vision</h2>
+            <div class="main_heading">
+              <span class="caption">À propos de nous</span>
+              <h2>Découvrez Notre Histoire - Qui Sommes-Nous ?</h2>
             </div>
-            <div class="about_parags show_el show_el--top">
-              <div class="about_parag parag" data-parag="0">
-                The B-Secure club is the flagship of the National School of
-                Applied Sciences of Khouribga in the fields of cybersecurity and
-                intelligent network engineering. Founded by a group of students
-                passionate about computer security, the club quickly emerged as
-                a key player in raising awareness about cybersecurity within the
-                school. Our goal is to train highly qualified security
-                professionals and contribute to strengthening the digital
-                resilience of our region. Join us in this exciting journey
-                towards a safer and more robust cyberspace!
+              <p class="parag">
+                Nous avons mis en place un projet d'irrigation intelligente
+                pour optimiser l'utilisation de l'eau en agriculture.
+                Grâce à des capteurs et des technologies avancées,
+                nous fournissons la quantité d'eau nécessaire, favorisant
+                une croissance robuste et durable des cultures. Cela permet
+                de réduire la consommation d'eau, de préserver les ressources
+                hydriques et de minimiser la pollution chimique des sols.
+              </p>
+            <div class="main_btns flex">
+              <div class="btn main_btn prim_btn flex">
+                <a target="_blank" href="start">Savoir Plus</a>
               </div>
-              <div class="about_parag parag hidden" data-parag="1">
-                The mission of the B-Secure club is to educate, raise awareness,
-                and train the next generation of experts in cybersecurity and
-                intelligent network engineering. We are committed to providing a
-                collaborative learning environment where ENSAK students can
-                develop their technical skills and knowledge in cybersecurity.
-                Furthermore, we strive to promote a culture of digital security
-                within our school and community by organizing workshops,
-                conferences, and awareness initiatives.
               </div>
-              <div class="about_parag parag hidden" data-parag="2">
-                The B-Secure club embodies a bold vision for a safer digital
-                future. Our vision is one where cyber threats are no longer a
-                source of concern, where individuals and organizations can
-                navigate the cyber space with confidence. We aspire to be a
-                beacon of cybersecurity in our academic community, illuminating
-                the path to understanding, preventing, and resolving the
-                challenges of computer security.
-              </div>
+            </div>
+            <div class="about_img">
+              <img src="./media/img1.jpg" alt="Smart Agri"/>
             </div>
           </div>
         </div>
-      </section> -->
+      </section>
 
       <!-- <section id="leadership" class="leadership_section">
-        <div class="main_heading show_el show_el--top">
+        <div class="main_heading show_el--top">
           <span class="caption">Leadership</span>
           <h2>Meet Our team</h2>
         </div>
