--- a/project/index.html
+++ b/project/index.html
@@ -161,13 +161,65 @@
         </div>
       </section>
 
+      <section id="features" class="features_section">
+        <div class="main_heading">
+          <span class="caption">Fonctionnalités</span>
+          <h2>Qu'est-ce qui nous caractérise ?</h2>
+        </div>
+        <div class="container">
+          <div class="features flex">
+            <div>
+              <i class="fa-solid fa-hand-holding-droplet"></i>
+              <h3 class="sec_heading">Gestion Durable de l'Eau</h3>
+              <p class="parag">
+                Notre projet privilégie des pratiques de gestion durable de l'eau,
+                garantissant une utilisation efficace de cette ressource vitale en agriculture.
+                En intégrant des technologies d'irrigation avancées et des
+                systèmes de contrôle de précision, nous visons à minimiser
+                le gaspillage d'eau et à promouvoir la conservation de l'environnement.
+              </p>
+            </div>
+            <a target="_blank" href="start" class="features_btn flex">Savoir Plus</a>
+          </div>
+          <div class="features flex">
+           <div>
+            <i class="fa-solid fa-microchip"></i>
+            <h3 class="sec_heading">Technologies Innovantes</h3>
+            <p class="parag">
+              Les technologies innovantes sont au cœur de notre projet, 
+              car nous intégrons des solutions de pointe pour la gestion
+              intelligente de l'irrigation. De la surveillance basée sur
+              des capteurs à l'analyse des données, notre approche exploite la
+              technologie pour optimiser la croissance des cultures, 
+              améliorer la productivité et réduire l'empreinte écologique.
+            </p>
+           </div>
+            <a target="_blank" href="start" class="features_btn flex">Savoir Plus</a>
+          </div>
+          <div class="features flex">
+            <div>
+              <i class="fa-solid fa-tree"></i>
+              <h3 class="sec_heading">Préservation de l'Écosystème</h3>
+              <p class="parag">
+                Notre projet met l'accent sur la préservation de l'écosystème
+                en minimisant l'impact négatif des pratiques d'irrigation conventionnelles
+                sur les habitats naturels. Grâce à une gestion soigneuse des ressources
+                en eau et à la promotion de la santé des sols, nous nous efforçons de
+                favoriser un écosystème équilibré qui soutient la biodiversité et la
+                durabilité écologique à long terme.
+              </p>
+            </div>
+            <a target="_blank" href="start" class="features_btn flex">Savoir Plus</a>
+          </div>
+        </div>
+      </section>
       <!-- <section id="leadership" class="leadership_section">
         <div class="main_heading show_el--top">
           <span class="caption">Leadership</span>
           <h2>Meet Our team</h2>
         </div>
         <div class="container members_container">
-          <div class="member_box flex show_el show_el--top">
+          <div class="member_box flex show_el--top">
             <div class="member_img">
               <img src="./media/member2.png" alt="Besecure Member" />
             </div>
