--- a/project/index.html
+++ b/project/index.html
@@ -571,7 +571,7 @@
             </div>
           </form>
       </div>
-    </main>
+    </main>0
     <div class="overlay hidden"></div>
     <div class="overlay2 hidden"></div>
     <div class="loader_content flex">
