--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                     class="flex"
                   >
                     <i class="fa-solid fa-location-dot"></i>
-                    <p>ENSA Khouribga</p>
+                    <p>Khouribga</p>
                   </a>
                 </li>
               </ul>
@@ -485,15 +485,15 @@
                     class="flex parag"
                   >
                     <i class="fa-solid fa-location-dot"></i>
-                    <p>ENSA Khouribga</p>
+                    <p>Khouribga</p>
                   </a>
                 </li>
               </ul>
             </div>
             <div class="column">
-              <h3>Join Us Now!</h3>
+              <h3>Acheter maintenant</h3>
               <div class="btn main_btn prim_btn flex">
-                <a href="#contact">Request to join</a>
+                <a href="#product">Commander Ici</a>
               </div>
             </div>
           </div>
@@ -501,10 +501,9 @@
             <a
               class="creator"
               target="_blank"
-              href="https://www.linkedin.com/in/othmane-bouchta-6b5a07255/"
-              >Created By
-              <span
-                >OTHMANE BOUCHTA
+              href="https://0thmane.com"
+              ><span>Created By</span>
+              <span>OTHMANE BOUCHTA
                 <i class="fa-solid fa-arrow-up-right-from-square"></i></span
             ></a>
           </div>
